--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body> 
-     
+     <header class="cabecalho">
+    <img class="cabecalho-imagem" src="cat_logo.png" alt="logo da Cat games">
+    <ul class="cabecalho-lista">
+    <li class="cabecalho-lista-item">Estudio</li>
+    <li class="cabecalho-lista-item">Imagens</li>
+     </ul>
+     </header>
 </body>
 </html>
