--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p class="escola-texto-um">UM studio no scrath, que criou alguns jogos</p>
             <p class="escola-texto-dois">Que foi criado por mim, e começou comigo porcurando uma imagem na internet, até que achei um gato com moletom</p>
         </div>
-        <img class="escola-imagem" src="">
+        <img class="escola-imagem" src="cat-piscada.png" alt="cat piscando e um coração">
      </section>
 </body>
 </html>
