--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">SOBRE CAT-GAMES</h2>
             <p class="escola-texto-um">Um estudio no scrath, que criou alguns jogos</p>
-            <p class="escola-texto-dois">Que foi criado por mim, e começou comigo porcurando uma imagem na internet, até que achei um gato com moletom</p>
+            <p class="escola-texto-dois">Foi criado por mim, e começou comigo porcurando uma imagem na internet, até que achei um gato com moletom</p>
         </div>
         <img class="escola-imagem" src="cat-piscada.png" alt="cat piscando e um coração">
      </section>
