--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
         </div>
         <img class="escola-imagem" src="cat-piscada.png" alt="cat piscando e um coração">
      </section>
+     <section class="escola">
+        <img class="escola-imagem" src="cat-piscada.png" alt="cat piscando e um coração">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">SOBRE CAT-GAMES</h2>
+            <p class="escola-texto-um">Um estudio no scrath, que cria alguns jogos</p>
+            <p class="escola-texto-dois">Foi criado por Lobojvitor, e começou comigo porcurando uma imagem na internet, até que achei um gato com moletom</p>
+        </div>
+     </section>
 </body>
 </html>
