--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <img class="escola-imagem" src="cat-piscada.png" alt="cat piscando e um coração">
      </section>
      <section class="escola">
-        <img class="escola-imagem" src="cat-piscada.png" alt="cat piscando e um coração">
+        <img class="escola-imagem" src="cat_jump.png" alt="jogo cat jump">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">SOBRE CAT-GAMES</h2>
-            <p class="escola-texto-um">Um estudio no scrath, que cria alguns jogos</p>
-            <p class="escola-texto-dois">Foi criado por Lobojvitor, e começou comigo porcurando uma imagem na internet, até que achei um gato com moletom</p>
+            <p class="escola-texto-um">esse foi o melhor jogo de CAT-GAMES o jogo que o publico mais gostou</p>
+            <p class="escola-texto-dois">https://scratch.mit.edu/projects/702120683/</p>
         </div>
      </section>
 </body>
