--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      <section class="escola">
         <img class="escola-imagem" src="cat_jump.png" alt="jogo cat jump">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">SOBRE CAT-GAMES</h2>
+            <h2 class="escola-titulo">SOBRE CAT-JUMP</h2>
             <p class="escola-texto-um">esse foi o melhor jogo de CAT-GAMES o jogo que o publico mais gostou</p>
             <p class="escola-texto-dois">https://scratch.mit.edu/projects/702120683/</p>
         </div>
