--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img class="escola-imagem" src="cat-piscada.png" alt="cat piscando e um coração">
      </section>
      <section class="escola">
-        <img class="escola-imagem" src="cat-jump.png" alt="jogo cat jump">
+        <img class="escola-imagem" src="1.png" alt="jogo cat jump">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">SOBRE CAT-JUMP</h2>
             <p class="escola-texto-um">esse foi o melhor jogo de CAT-GAMES o jogo que o publico mais gostou</p>
