--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">SOBRE CAT-JUMP</h2>
             <p class="escola-texto-um">esse foi o melhor jogo de CAT-GAMES o jogo que o publico mais gostou</p>
-            <p class="escola-texto-dois">https://scratch.mit.edu/projects/702120683/</p>
+            <a href="https://scratch.mit.edu/projects/702120683/">clique aqui para jogar</a>
         </div>
      </section>
 </body>
