--- a/index.html
+++ b/index.html
@@ -30,5 +30,13 @@
             <a href="https://scratch.mit.edu/projects/702120683/">clique aqui para jogar</a>
         </div>
      </section>
+     <section class="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">SOBRE CAT-COMPRA</h2>
+            <p class="escola-texto-um">esse é um jogo de você dar o troco para os gatos</p>
+            <a href="https://scratch.mit.edu/projects/702637120/">clique aqui para jogar</a>
+            <img class="escola-imagem" src="cat_compra.png" alt="jogo cat jump">
+        </div>
+     </section>
 </body>
 </html>
