--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
         </div>
         <img class="escola-imagem" src="cat-piscada.png" alt="cat piscando e um coração">
      </section>
+
      <section class="escola">
-        <img class="escola-imagem" src="1.png" alt="jogo cat jump">
+        <div class="escola-div-conteudo">
+            <img class="escola-imagem" src="1.png" alt="jogo cat jump">
+        </div>
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">SOBRE CAT-JUMP</h2>
             <p class="escola-texto-um">esse foi o melhor jogo de CAT-GAMES o jogo que o publico mais gostou</p>
             <a href="https://scratch.mit.edu/projects/702120683/">clique aqui para jogar</a>
         </div>
      </section>
+
      <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">SOBRE CAT-COMPRA</h2>
