--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      </ul>
      </header>
      <section class="escola">
-        <div class="escola-div-conteudo">
+        <div class="escola-div-conteudo-1">
             <h2 class="escola-titulo">SOBRE CAT-GAMES</h2>
             <p class="escola-texto-um">Um estudio no scrath, que cria alguns jogos</p>
             <p class="escola-texto-dois">Foi criado por Lobojvitor, e começou comigo porcurando uma imagem na internet, até que achei um gato com moletom</p>
@@ -24,7 +24,7 @@
      </section>
 
      <section class="escola">
-        <div class="escola-div-conteudo">
+        <div class="escola-div-conteudo-2">
             <img class="escola-imagem" src="1.png" alt="jogo cat jump">
         </div>
         <div class="escola-div-conteudo">
@@ -35,7 +35,7 @@
      </section>
 
      <section class="escola">
-        <div class="escola-div-conteudo">
+        <div class="escola-div-conteudo-2">
             <h2 class="escola-titulo">SOBRE CAT-COMPRA</h2>
             <p class="escola-texto-um">esse é um jogo de você dar o troco para os gatos</p>
             <a href="https://scratch.mit.edu/projects/702637120/">clique aqui para jogar</a>
