--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <p class="escola-texto-um">esse é um jogo de você dar o troco para os gatos</p>
             <a href="https://scratch.mit.edu/projects/702637120/">clique aqui para jogar</a>
         </div>
-        <img class="escola-imagem" src="cat_compra.png" alt="jogo cat jump">
+        <div class="escola-div-conteudo-2">
+            <img class="escola-imagem" src="cat_compra.png" alt="jogo cat jump">
+        </div>
      </section>
 </body>
 </html>
