--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
      </section>
 
      <section class="escola">
-        <div class="escola-div-conteudo-2">
+        <div class="escola-div-conteudo">
             <h2 class="escola-titulo">SOBRE CAT-COMPRA</h2>
-            <p class="escola-texto-um">esse é um jogo de você dar o troco para os gatos</p>
-            <a href="https://scratch.mit.edu/projects/702637120/">clique aqui para jogar</a>
+            <p class="escola-texto-um">esse jogo você tem que dar o troco para os gatos</p>
+            <a href="https://scratch.mit.edu/projects/702120683/">clique aqui para jogar</a>
         </div>
         <div class="escola-div-conteudo-2">
-            <img class="escola-imagem" src="cat_compra.png" alt="jogo cat jump">
+            <img class="escola-imagem" src="cat_compra.png" alt="jogo cat compra">
         </div>
      </section>
-</body>
+    </body>
 </html>
