--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <p class="escola-texto-um">Um estudio no scrath, que cria alguns jogos</p>
             <p class="escola-texto-dois">Foi criado por Lobojvitor, e começou comigo porcurando uma imagem na internet, até que achei um gato com moletom</p>
         </div>
-        <img class="escola-imagem" src="cat-piscada.png" alt="cat piscando e um coração">
+        <img class="escola-imagem-1" src="cat-piscada.png" alt="cat piscando e um coração">
      </section>
 
      <section class="escola">
         <div class="escola-div-conteudo-2">
-            <img class="escola-imagem" src="1.png" alt="jogo cat jump">
+            <img class="escola-imagem-2" src="1.png" alt="jogo cat jump">
         </div>
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">SOBRE CAT-JUMP</h2>
@@ -41,7 +41,7 @@
             <a href="https://scratch.mit.edu/projects/702120683/">clique aqui para jogar</a>
         </div>
         <div class="escola-div-conteudo-2">
-            <img class="escola-imagem" src="cat_compra.png" alt="jogo cat compra">
+            <img class="escola-imagem-2" src="cat_compra.png" alt="jogo cat compra">
         </div>
      </section>
     </body>
